--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ body {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
- width: 100vw;
- height: 100vh;
+ width: 100dvw;
+ height: 100dvh;
  justify-content: space-between;
  align-items: space-evenly;
 }
@@ -33,23 +33,29 @@ button {
   font-size: 20px;
 }
 
-#one {
+#rock {
   background-color: red;
 }
 
-#two {
+#paper {
   background-color: green;
 }
 
-#three {
+#scissors {
   background-color: blue;
 }
 
 .output {
-  background-color: black;
+  background-color: rgba(155,55,255,0.6);
   width: 400px;
   height: 150px;
   align-self: center;
+  border-radius: 25px;
+  text-align: center;
+  align-content: center;
+  font-size: 25px;
+  color: whitesmoke;
+  font-weight: 800;
 }
 
 .footer {
