--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 .header {
   background-color: grey;
   height: 15dvh; 
-  width: 100%;
+  width: auto;
 }
 
 .options {
@@ -21,6 +21,17 @@ body {
  justify-content: center;
  align-items: center;
  gap: 50px;
+}
+
+.score-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.player-container,
+.computer-container {
+  display: flex;
+  gap: 5px;
 }
 
 button {
@@ -71,6 +82,6 @@ button {
 
 .footer {
   background-color: darkgreen;
-  width: 100%;
+  width: auto;
   height: 15dvh;
 }
