--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 .header {
-  background-color: rgba(255,255,255, 0.1);
+  background-color: rgba(255,255,255, 0.0);
   border-bottom-style: dotted;
   border-color: lightgreen;
   height: 15dvh; 
@@ -59,7 +59,7 @@ button {
   font-weight: 800;
   font-size: 30px;
   background-color: rgba(255,255,255, 0.0);
-  font-family: 'Handjet';
+  font-family: 'Handjet', sans-serif;
 }
 
 .result-container {
@@ -99,10 +99,14 @@ button {
 }
 
 .footer {
-  background-color: darkslaterbga(255, 255, 255, 0.0);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: whitesmoke;
+  background-color: rgba(255, 255, 255, 0.0);
   width: auto;
-  height: 15dvh;
-  background-color: rgba(255,255,255, 0.1);
+  height: 20dvh;
   border-top-style: dotted;
   border-color: lightgreen;
+  color: lightgreen;
 }
