--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ button {
   align-items: center; 
   background-color: rbga(255, 255, 255, 0.0);
   height: 6rem;
-  width: 42rem;
+  width: 40rem;
   align-self: center;
   border-radius: 25px;
   color: whitesmoke;
@@ -77,12 +77,14 @@ button {
 }
 
 .player-score-text,
-.computer-score-text {
+.computer-score-text,
+.draw-score-text {
   font-size: 30px;
 }
 
 .player-score,
-.computer-score {
+.computer-score,
+.draw-score {
   color: lightgreen;
   font-size: 30px;
   font-weight: 800px;
@@ -105,8 +107,10 @@ button {
   color: whitesmoke;
   background-color: rgba(255, 255, 255, 0.0);
   width: auto;
-  height: 20dvh;
+  height: 15dvh;
   border-top-style: dotted;
   border-color: lightgreen;
   color: lightgreen;
+  line-height: 0;
+  font-size: 20px;
 }
